2008-10-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ulimit.c (__ulimit): Handle UL_GETFSIZE
	return value in case rlimit is RLIM_INFINITY.

	[BZ #6947]
	* sysdeps/unix/sysv/linux/ulimit.c (__ulimit): Fix return value
	for UL_SETFSIZE.
	* resource/Makefile (tests): Add bug-ulimit1.
	* resource/bug-ulimit1.c: New file.

	[BZ #6974]
	* sunrpc/rpc_main.c (mkfile_output): Properly handle filename
	without dot.  Properly terminate the string with a null byte.
	Based on a patch by Aurelien Jarno <aurelien@aurel32.net>.

	[BZ #6980]
	* debug/getgroups_chk.c (__getgroups_chk): Return EINVAL error for
	negative sizees.
	* posix/bits/unistd.h (getgroups): Call __getgroups_chk for
	negative __size.

	[BZ #6995]
	* sysdeps/powerpc/powerpc32/dl-machine.c: Fix typo in message.

2008-10-30  Ulrich Drepper  <drepper@redhat.com>

	* grp/initgroups.c (internal_getgrouplist): Don't prematurely
	abort if there is no initgroups_dyn function.

	* resolv/res_send.c (send_dg): On timeout, only return nonzero
	result if any of the queries really provided an answer.

2008-10-28  Ulrich Drepper  <drepper@redhat.com>

	* po/lt.po: Update from translation team.

2008-10-26  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: Update from translation team.

2008-10-24  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_query.c (__libc_res_nquery): Add a few casts.
	Fix tests for existence of second reply.

2008-10-23  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: New file.
	Contributed by the Indonesian translation team.

2008-10-22  Dmitry V. Levin  <ldv@altlinux.org>

	* misc/syslog.c (openlog_internal): Fix __have_sock_cloexec
	initialization.

2008-10-17  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile: Add rules to build and run tst-tls17.
	* elf/tst-tls17.c: New test.
	* elf/tst-tlsmod17a.c: New file.
	* elf/tst-tlsmod17b.c: Likewise.

2008-10-17  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/divmod_1.c: Use correct type for dummy variable.